PR/50694: David Binderman: Fix wrong pasto constant.